<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dellapenna.personal</groupId>
    <artifactId>BPMNModelTranslator</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>       
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-bpmn-model</artifactId>
            <version>7.21.0</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-cmmn-model</artifactId>
            <version>7.21.0</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-dmn-model</artifactId>
            <version>7.21.0</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-xml-model</artifactId>
            <version>7.21.0</version>
        </dependency> 
        <!-- 
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-bpmn-model</artifactId>
            <version>7.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-cmmn-model</artifactId>
            <version>7.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-dmn-model</artifactId>
            <version>7.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-xml-model</artifactId>
            <version>7.20.0</version>
        </dependency>      
        -->  
        <!--
        <dependency>
            <groupId>org.camunda.bpm.extension.dmn.scala</groupId>
            <artifactId>dmn-engine-camunda-plugin</artifactId>
            <version>1.7.4</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.camunda.feel</groupId>
            <artifactId>feel-engine</artifactId>
            <version>1.17.1</version>
        </dependency>
        <!--
         <dependency>
            <groupId>org.camunda.bpm.model</groupId>
            <artifactId>camunda-model-apis</artifactId>
            <version>7.20.0</version>
        </dependency>
        -->
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <exec.mainClass>dellapenna.personal.bpmnmodeltest.BPMNModelTest</exec.mainClass>
    </properties>
    <name>BPMNModelTranslator</name>
</project>